app_cluster_yml/ingress.yml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-javaapp1
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: java1
    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource)
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /   
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    # External DNS - For creating a Record Set in cloudfront
    external-dns.alpha.kubernetes.io/hostname: java.mycloudprojects.uk, sonar.mycloudprojects.uk
spec:
  ingressClassName: my-aws-ingress-class # Ingress Class
  rules:
  - host: java.mycloudprojects.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-backend
            port:
              number: 80
  - host: sonar.mycloudprojects.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prueba-eks-sonarqube-dev-sonarqube
            port:
              number: 9000
